kubernetes/deploy_api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k-events
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: api
    app: k-events-api
    namespace: k-events
    tag: 1.0.0
  name: api
  namespace: k-events
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - image: k-events-api:1.0.0
          name: api
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    type: api
    app: k-events-api
    namespace: k-events
    tag: 1.0.0
  name: app
spec:
  selector:
    name: app
  ports:
    - port: 8080
      name: api
      targetPort: 8080
  type: ClusterIP
