kubernetes/deploy_db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k-events
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: db
    app: mongo
    name: mongo
    namespace: k-events
    tag: 5.0.5
  name: mongo
  namespace: k-events
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
        - image: mongo:5.0.5
          name: mongo
          ports:
            - containerPort: 27017
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    type: db
    app: mongo
    name: mongo
    namespace: k-events
    tag: 5.0.5
  name: mongo
  namespace: k-events
spec:
  selector:
    name: mongo
  ports:
    - port: 27017
      name: db
      targetPort: 27017
  type: ClusterIP
